# GoMonte

./: .gitignore  CMakeLists.txt  app_icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.VSCodeCounter/2025-01-11_17-57-11/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
code_storage/: SearchAgent.cpp  SearchAgent.h
include/: BoardCellWidget.h  FileOP.h  GameController.h  GameData.h  GameSaver.h  GomokuBoard.h  HelperFunctions.h  MainBoardWidget.h  MainMenuWidget.h  SaveSelectionDialog.h  SearchAgent.h
src/ai/: SearchAgent.cpp
src/board/: GomokuBoard.cpp
src/file operations/: FileOP.cpp
src/game/: GameController.cpp  GameData.cpp  GameSaver.cpp
src/helper/: HelperFunctions.cpp
src/widgets/: BoardCellWidget.cpp  MainBoardWidget.cpp  MainMenuWidget.cpp  SaveSelectionDialog.cpp
tests/: judge_test.cpp
